--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -121,6 +121,6 @@
   <mr-button-icon
     [icon]="'arrow-left'"
     (clicked)="handleToBack()"
-    class="channels-content__back"
+    class="channels-content__back channels-content__back--{{ notices?.[0]?.channel }}"
   ></mr-button-icon>
 </div>
