--- a/src/app/ui/blocks/channels-content/channels-content.component.scss
+++ b/src/app/ui/blocks/channels-content/channels-content.component.scss
@@ -1,104 +1,171 @@
-@use '../../_styles/index.scss' as styles;
+@use "../../_styles/index.scss" as styles;
 
 .channels-content {
+  position: relative;
+  padding-top: styles.$box-pad-home-content;
+
+  &__background {
+    position: absolute;
+    z-index: styles.func-toNeg(1);
+    top: styles.$box-pad-none;
+    left: styles.$box-pad-none;
+    width: styles.$box-wth-block;
+  }
+
+  &__image {
     position: relative;
-    padding-top: styles.$box-pad-home-content;
-  
-    &__background {
-      position: absolute;
-      z-index: styles.func-toNeg(1);
-      top: styles.$box-pad-none;
-      left: styles.$box-pad-none;
-      width: styles.$box-wth-block;
+    width: styles.func-toRem(12.5);
+  }
+
+  &__info {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: styles.$box-pad-double styles.$box-pad-none styles.func-toRem(3)
+      styles.func-toRem(7.5);
+    gap: styles.$box-pad-base;
+  }
+
+  &__text {
+    .text {
+      color: styles.$color-bg-white !important;
+      text-shadow: -4px 4px 3px rgba(0, 0, 0, 0.3);
+    }
+
+    &--large {
+      .text {
+        font-size: styles.func-toRem(4) !important;
+        line-height: styles.func-toRem(4) !important;
+      }
+    }
+  }
+
+  &__users-container {
+    .card {
+      margin-top: styles.func-toRem(3) !important;
+      margin-bottom: styles.func-toRem(3) !important;
+    }
+  }
+
+  &__users-container {
+    .table {
+      &__tr {
+        &:nth-child(even) {
+          background: styles.$color-status-info !important;
+        }
+
+        &:hover {
+          background: styles.$color-status-info !important;
+        }
+      }
+    }
+  }
+
+  &__users-container,
+  &__notices-container {
+    position: relative;
+
+    .card {
+      border-radius: styles.$box-rad-large styles.$box-rad-large
+        styles.$box-pad-none styles.$box-pad-none !important;
+      width: 90% !important;
+      margin: styles.$box-mrg-none auto;
+    }
+  }
+
+  &__notices {
+    display: grid;
+    grid-template-columns: repeat(2, styles.$box-fr-base);
+    padding: 0 styles.func-toRem(2.5);
+    gap: styles.func-toRem(3.12);
+    row-gap: styles.func-toRem(1.8);
+  }
+
+  &-users-list {
+    &__td {
+      padding: styles.$box-pad-half;
+      max-width: styles.$box-wth-column-list;
     }
 
     &__image {
-      position: relative;
-      width: styles.func-toRem(12.5);
+      cursor: pointer;
+      width: styles.$box-wth-double;
+      height: styles.$box-hht-double;
     }
+  }
 
-    &__info {
-      position: relative;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      padding: styles.$box-pad-double styles.$box-pad-none styles.func-toRem(3) styles.func-toRem(7.5);
-      gap: styles.$box-pad-base;
-    }
+  &__back {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 1;
+    animation: animate 1s linear infinite;
 
-    &__text {
-      .text {
-        color: styles.$color-bg-white !important;
-        text-shadow: -4px 4px 3px rgba(0, 0, 0, 0.3);
+    & .button-icon {
+      height: styles.func-toRem(4) !important;
+      width: styles.func-toRem(4) !important;
+      color: styles.$color-bg-white !important;
+      background-color: styles.$color-primary-color-alt;
+      font-size: styles.func-toRem(1.56);
+
+      &:hover {
+        background-color: styles.$color-primary-color-alt !important;
       }
+    }
 
-      &--large {
-        .text {
-          font-size: styles.func-toRem(4) !important;
-          line-height: styles.func-toRem(4) !important;
+    &--network {
+      & .button-icon {
+        background-color: styles.$color-status-info-dark;
+
+        &:hover {
+          background-color: styles.$color-status-info-dark !important;
         }
       }
     }
 
-    &__users-container{
-      .card {
-        margin-top: styles.func-toRem(3) !important;
-        margin-bottom: styles.func-toRem(3) !important;
-      }
-    }
+    &--business {
+      & .button-icon {
+        background-color: styles.$color-status-error-dark;
 
-    &__users-container{
-      .table {
-        &__tr {
-          &:nth-child(even) {
-            background: styles.$color-status-info !important;
-          }
-
-          &:hover {
-            background: styles.$color-status-info !important;
-          }
+        &:hover {
+          background-color: styles.$color-status-error-dark !important;
         }
       }
     }
 
-    &__users-container,
-    &__notices-container {
-      position: relative;
+    &--opportunities {
+      & .button-icon {
+        background-color: styles.$color-status-success-dark;
 
-      .card {
-        border-radius: styles.$box-rad-large styles.$box-rad-large styles.$box-pad-none styles.$box-pad-none !important;
-        width: 90% !important;
-        margin: styles.$box-mrg-none auto;
+        &:hover {
+          background-color: styles.$color-status-success-dark !important;
+        }
       }
     }
 
-    &__notices {
-      display: grid;
-      grid-template-columns: repeat(2, styles.$box-fr-base);
-      padding: 0 styles.func-toRem(2.5);
-      gap: styles.func-toRem(3.12);
-      row-gap: styles.func-toRem(1.8);
-    }
+    &--training {
+      & .button-icon {
+        background-color: styles.$color-status-warning-dark;
 
-    &-users-list {
-      &__td {
-        padding: styles.$box-pad-half;
-        max-width: styles.$box-wth-column-list;
-      }
-
-      &__image {
-        cursor: pointer;
-        width: styles.$box-wth-double;
-        height: styles.$box-hht-double;
+        &:hover {
+          background-color: styles.$color-status-warning-dark !important;
+        }
       }
     }
+  }
+}
 
-    &__back {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      z-index: 1;
-    }
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @media (max-width: styles.$bkp-mobile) {
@@ -121,7 +188,8 @@
     }
 
     &__info {
-      padding: styles.func-toRem(1) styles.$box-pad-none styles.func-toRem(1) styles.func-toRem(0.7) !important;
+      padding: styles.func-toRem(1) styles.$box-pad-none styles.func-toRem(1)
+        styles.func-toRem(0.7) !important;
     }
   }
 }
@@ -142,11 +210,11 @@
   .channels-content {
     &__image {
       width: styles.func-toRem(9.5);
-
     }
-    
+
     &__info {
-      padding: styles.$box-pad-double styles.$box-pad-none styles.func-toRem(3) styles.func-toRem(3);
+      padding: styles.$box-pad-double styles.$box-pad-none styles.func-toRem(3)
+        styles.func-toRem(3);
     }
 
     &__notices {
