--- a/src/app/ui/blocks/profile-user/profile-user.component.scss
+++ b/src/app/ui/blocks/profile-user/profile-user.component.scss
@@ -92,6 +92,27 @@ a {
     bottom: 10px;
     left: 10px;
     z-index: 1;
+    animation: animate 1s linear infinite;
+  
+    & .button-icon {
+      height: styles.func-toRem(4) !important;
+      width: styles.func-toRem(4) !important;
+      background-color: styles.$color-primary-color-alt !important;
+      color: styles.$color-bg-white !important;
+      font-size: styles.func-toRem(1.56);
+    }
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
