Fixed responsiveness of channels

--- a/src/app/ui/elements/notice/notice.component.html
+++ b/src/app/ui/elements/notice/notice.component.html
@@ -1,5 +1,5 @@
-<div class="channels-content__notice">
-    <figure class="channels-content__image channels-content__image--shadow channels-content__image--shadow--{{channel}}">
+<div class="channels-content-container__notice">
+    <figure class="channels-content-container__image channels-content-container__image--shadow channels-content-container__image--shadow--{{channel}}">
         <mr-image [image]="image" [rounded]="'circle'" [alt]="'notice-item'"></mr-image>
     </figure>
     <mr-text [text]="title" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
