--- a/src/app/shared/authentication/user-login-form-container/user-login-container-form.component.html
+++ b/src/app/shared/authentication/user-login-form-container/user-login-container-form.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="{
-  currentUser: (currentUser$ | async)
+  currentUser: (currentUser$ | async),
+  formNotification: (formNotification$ | async)
 } as data">
   <mr-form-user-login
-    [currentUser]="data.currentUser ?? undefined"
+    [currentUser]="data.currentUser"
+    [formNotification]="data.formNotification"
     (dataOutput)="handleLogin($event)"
   ></mr-form-user-login>
 </ng-container>
