--- a/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
+++ b/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
@@ -44,6 +44,13 @@
   }
 }
 
+@media (max-width: styles.$bkp-mobile) {
+  .profile-current-user {
+    &__form {
+      padding-top: 80px;
+    }
+  }
+}
 
 @keyframes animate {
   0% {
