--- a/src/app/ui/forms/form-user-login/form-user-login.component.html
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.html
@@ -3,7 +3,7 @@
   [type]="'paragraph'"
   [size]="'medium'"
   [weight]="'bold'"
-  [text]="'¡Bienvenida a la comunidad de mujeresROFÉ, un espacio para crecer, aprender y emprender!'"
+  [text]="'¡Bienvenida a la comunidad de MujeresROFÉ, un espacio para crecer, aprender y emprender!'"
 ></mr-text>
 
 <form class="form-user-login" [formGroup]="form.formGroup">
