--- a/src/app/shared/home/home-content-container/home-content-container.component.html
+++ b/src/app/shared/home/home-content-container/home-content-container.component.html
@@ -1,1 +1,8 @@
-<mr-home-content></mr-home-content>
+<ng-container *ngIf="{
+  currentUser: (currentUser$ | async) 
+} as data">
+  <mr-home-content
+    [currentUser]="data.currentUser"
+  ></mr-home-content>
+</ng-container>
+
