--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -1,40 +1,92 @@
 <div class="home-content">
+  <div class="home-content__welcome">
+    <mr-card>
+      <ng-container>
+        <mr-text 
+          [type]="'line'" 
+          [weight]="'bold'" 
+          [text]="'¡Bienvenida ' + currentUser?.firstName + ' ' + currentUser?.lastName + ' a esta comunidad!'">
+        </mr-text>
+      </ng-container>
+    </mr-card>
+  </div>
   <mr-home-background class="home-content__background"></mr-home-background>
   <div class="home-content__channels">
-    <div class="home-content__channel home-content__channel--red" (click)="navigateToChannel('channels/network')">
+    <div
+      class="home-content__channel home-content__channel--red"
+      (click)="navigateToChannel('channels/network')"
+    >
       <figure class="home-content__logo">
         <mr-image [image]="'assets/img/red.png'" [alt]="'red'"></mr-image>
       </figure>
-      <mr-text [text]="'Red'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
+      <mr-text
+        [text]="'Red'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
     </div>
 
-    <div class="home-content__channel home-content__channel--oportunidades" (click)="navigateToChannel('channels/opportunities')">
+    <div
+      class="home-content__channel home-content__channel--oportunidades"
+      (click)="navigateToChannel('channels/opportunities')"
+    >
       <figure class="home-content__logo">
-        <mr-image [image]="'assets/img/oportunidades.png'" [alt]="'oportunidades'"></mr-image>
+        <mr-image
+          [image]="'assets/img/oportunidades.png'"
+          [alt]="'oportunidades'"
+        ></mr-image>
       </figure>
-      <mr-text [text]="'Oportunidades'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
+      <mr-text
+        [text]="'Oportunidades'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
     </div>
 
-    <div class="home-content__channel home-content__channel--formacion" (click)="navigateToChannel('channels/training')">
+    <div
+      class="home-content__channel home-content__channel--formacion"
+      (click)="navigateToChannel('channels/training')"
+    >
       <figure class="home-content__logo">
-        <mr-image [image]="'assets/img/formacion.png'" [alt]="'formacion'"></mr-image>
+        <mr-image
+          [image]="'assets/img/formacion.png'"
+          [alt]="'formacion'"
+        ></mr-image>
       </figure>
-      <mr-text [text]="'Formación'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
+      <mr-text
+        [text]="'Formación'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
     </div>
 
-    <div class="home-content__channel home-content__channel--emprendimiento" (click)="navigateToChannel('channels/business')">
+    <div
+      class="home-content__channel home-content__channel--emprendimiento"
+      (click)="navigateToChannel('channels/business')"
+    >
       <figure class="home-content__logo">
-        <mr-image [image]="'assets/img/emprendimiento.png'" [alt]="'emprendimiento'"></mr-image>
+        <mr-image
+          [image]="'assets/img/emprendimiento.png'"
+          [alt]="'emprendimiento'"
+        ></mr-image>
       </figure>
-      <mr-text [text]="'Emprendimiento'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
+      <mr-text
+        [text]="'Emprendimiento'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
     </div>
   </div>
 
   <div class="home-content__description">
     <mr-card>
       <ng-container>
-        <p>El programa Mujeres ROFÉ surgió en el marco de la estrategia para contrarrestar los efectos económicos y emocionales del COVID-19
-          en mujeres cabeza de hogar en Colombia.</p>
+        <p>
+          Mujeres ROFÉ busca dar autosuficiencia e independencia económica a
+          mujeres cabeza de hogar, a través de su fortalecimiento personal y
+          transferencia de herramientas para que se desempeñen
+          satisfactoriamente en el entorno del emprendimiento.
+        </p>
       </ng-container>
     </mr-card>
   </div>
