--- a/src/app/ui/blocks/home-content/home-content.component.scss
+++ b/src/app/ui/blocks/home-content/home-content.component.scss
@@ -1,4 +1,4 @@
-@use '../../_styles/index.scss' as styles;
+@use "../../_styles/index.scss" as styles;
 
 .home-content {
   position: relative;
@@ -52,10 +52,11 @@
   }
 
   &__logo {
-    height: styles.$box-hht-home-content-logo
+    height: styles.$box-hht-home-content-logo;
   }
 
-  &__description {
+  &__description,
+  &__welcome {
     @include styles.font-extra-large;
     margin: 0 auto;
     width: 85%;
@@ -65,6 +66,12 @@
     p {
       color: styles.$color-primary-color !important;
     }
+  }
+
+  &__welcome {
+    text-align: left;
+    width: fit-content;
+    padding: styles.$box-pad-base styles.$box-pad-none;
   }
 }
 
@@ -85,7 +92,7 @@
     }
 
     &__logo {
-      height: styles.$box-hht-home-content-logo-tbl
+      height: styles.$box-hht-home-content-logo-tbl;
     }
   }
 }
@@ -93,7 +100,7 @@
 @media (min-width: styles.$bkp-desktop) {
   .home-content {
     &__logo {
-      height: styles.$box-hht-home-content-logo
+      height: styles.$box-hht-home-content-logo;
     }
   }
 }
