--- a/src/app/ui/forms/form-user-login/form-user-login.component.html
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.html
@@ -19,13 +19,13 @@
       [formControlName]="form.formControlNames.email"
     ></mr-sub-form-input>
 
-    <mr-sub-form-input
+    <mr-sub-form-input-login
       [type]="'password'"
       [label]="'Contraseña'"
       [icon]="'fas fa-lock'"
       [placeholder]="'**********'"
       [formControlName]="form.formControlNames.password"
-    ></mr-sub-form-input>
+    ></mr-sub-form-input-login>
 
     <mr-button
       [label]="'Iniciar sesión'"
