A filter was added to search for releases by channel

--- a/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
+++ b/src/app/shared/admin/admin-notices-list-container/admin-notices-list-container.component.html
@@ -9,6 +9,7 @@
     [canCloseModal]="data.canCloseModal"
     [channelOptions]="data.channelOptions"
     [noticeToUpdate]="data.noticeToUpdate"
+    (noticesByChannel)="handleLoadNoticesByChannel($event)"
     (createNotice)="handleCreateNotice($event)"
     (deleteNotice)="handleDeleteNotice($event)"
     (loadNoticeToUpdate)="handleLoadNoticeToUpdate($event)"
