--- a/src/app/ui/blocks/register-content/register-content.component.scss
+++ b/src/app/ui/blocks/register-content/register-content.component.scss
@@ -18,6 +18,22 @@
     align-items: center;
     width: 100%;
   }
+
+  &__back {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 1;
+    animation: animate 1s linear infinite;
+  
+    & .button-icon {
+      height: styles.func-toRem(4) !important;
+      width: styles.func-toRem(4) !important;
+      background-color: styles.$color-primary-color-alt !important;
+      color: styles.$color-bg-white !important;
+      font-size: styles.func-toRem(1.56);
+    }
+  }
 }
 
 @media (min-width: styles.$bkp-tablet) {
@@ -25,5 +41,17 @@
     &__form {
       height: 100vh;
     }
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
   }
 }
