--- a/src/app/ui/blocks/channels-content/channels-content.component.scss
+++ b/src/app/ui/blocks/channels-content/channels-content.component.scss
@@ -86,6 +86,10 @@
     &__td {
       padding: styles.$box-pad-half;
       max-width: styles.$box-wth-column-list;
+
+      .button {
+        background: styles.$color-status-info-dark !important;
+      }
     }
 
     &__image {
