--- a/src/app/ui/elements/notice/notice.component.html
+++ b/src/app/ui/elements/notice/notice.component.html
@@ -2,5 +2,8 @@
     <figure class="channels-content-container__image channels-content-container__image--shadow channels-content-container__image--shadow--{{channel}}">
         <mr-image [image]="image" [rounded]="'circle'" [alt]="'notice-item'"></mr-image>
     </figure>
-    <mr-text [text]="title" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
+    <div class="channels-content-container__notice-info">
+        <mr-text [text]="title" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
+        <mr-text [text]="description" [size]="'medium'"  [weight]="'light'"></mr-text>
+    </div>
 </div>
