--- a/src/app/ui/blocks/notices-content/notices-content.component.html
+++ b/src/app/ui/blocks/notices-content/notices-content.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <mr-card class="notices-content__notice-container">
-    <ng-container *ngIf="notice?.links?.length > 2 || notice?.description?.length > 50">
+    <ng-container *ngIf="!notice?.showUsersList && notice?.links?.length > 2 || notice?.description?.length > 50">
       <div class="notices-content__notice">
         <figure
           class="notices-content__image-notice notices-content__image-notice--shadow notices-content__image-notice--shadow--{{
@@ -68,7 +68,7 @@
       </div>
     </ng-container>
 
-    <ng-container *ngIf="notice?.links?.length <= 2 && notice?.description?.length < 50">
+    <ng-container *ngIf="!notice?.showUsersList && notice?.links?.length <= 2 && notice?.description?.length < 50">
       <div class="notices-content__notice notices-content__notice--center">
         <div class="notices-content__info-notice">
           <mr-text
@@ -113,6 +113,91 @@
         </div>
       </div>
     </ng-container>
+
+    <div 
+      *ngIf="notice?.showUsersList"
+      class="notices-content__users-container"
+    >
+      <ng-container>
+        <mr-table
+          [headers]="[
+            ['', '0.5rem'],
+            ['Nombre', '3rem'],
+            ['Apellido', '3rem'],
+            ['Contacto', '3rem'],
+            ['Descripción', '10rem'],
+            ['Correo', '7rem'],
+            ['Ver perfil', '2.5rem']
+          ]"
+          [items]="users || []"
+          [itemTemplateRef]="userTemplate"
+        ></mr-table>
+  
+        <ng-template #userTemplate let-user="item" let-index="index">
+          <td class="notices-content-users-list__td">
+            <figure class="notices-content-users-list__image">
+              <mr-image
+                [image]="user?.image?.url"
+                [rounded]="'circle'"
+                [alt]="'icon-user'"
+              ></mr-image>
+            </figure>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-text
+              [color]="'initial'"
+              [type]="'line'"
+              [text]="user?.firstName"
+              [size]="'base'"
+              [weight]="'regular'"
+            ></mr-text>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-text
+              [color]="'initial'"
+              [type]="'line'"
+              [text]="user?.lastName"
+              [size]="'base'"
+              [weight]="'regular'"
+            ></mr-text>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-text
+              [color]="'initial'"
+              [type]="'line'"
+              [text]="user?.phoneNumber"
+              [size]="'base'"
+              [weight]="'regular'"
+            ></mr-text>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-text
+              [color]="'initial'"
+              [type]="'line'"
+              [text]="user?.description"
+              [size]="'base'"
+              [weight]="'regular'"
+            ></mr-text>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-text
+              [color]="'initial'"
+              [type]="'line'"
+              [text]="user?.email"
+              [size]="'base'"
+              [weight]="'regular'"
+            ></mr-text>
+          </td>
+          <td class="notices-content-users-list__td">
+            <mr-button
+              [display]="'block'"
+              [icon]="'fas fa-eye'"
+              (clicked)="navigateToUser(user.id)"
+            ></mr-button>
+          </td>
+        </ng-template>
+      </ng-container>
+    </div>
   </mr-card>
 
   <figure class="notices-content__wave">
