A validation has been added to send to an external page the new type of communication

--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -33,7 +33,9 @@
           [title]="notice?.title"
           [description]="notice?.description"
           [channel]="notice?.channel"
-          (click)="navigateToNotice(notice.channel, notice.id)"
+          [isLink]="notice?.isLink"
+          [url]="notice?.url"
+          [id]="notice?.id"
         ></mr-notice>
       </div>
     </ng-container>
