Link field added in the notice form

--- a/src/app/ui/forms/form-notice/form-notice.component.html
+++ b/src/app/ui/forms/form-notice/form-notice.component.html
@@ -16,6 +16,15 @@
   </fieldset>
 
   <fieldset class="form-notice__description">
+    <mr-sub-form-input 
+      [type]="'input'"
+      [label]="'Enlace'"
+      [icon]="'fas fa-link'"
+      [formControlName]="form.formControlNames.url"
+    ></mr-sub-form-input>
+  </fieldset>
+
+  <fieldset class="form-notice__description">
     <mr-sub-form-select
       [placeholder]="'Seleccione un canal'"
       [options]="channelOptions"
