--- a/src/app/shared/authentication/register-container/register-container.component.html
+++ b/src/app/shared/authentication/register-container/register-container.component.html
@@ -1,12 +1,30 @@
 <ng-container *ngIf="{
   hobbies: (hobbies$ | async),
   cities: (cities$ | async),
-  states: (states$ | async)
+  states: (states$ | async),
+  documents: (documents$ | async),
+  education: (education$ | async),
+  ethnicGroups: (ethnicGroups$ | async),
+  familyCore: (familyCore$ | async),
+  familyIncome: (familyIncome$ | async),
+  housingType: (housingType$ | async),
+  maritalStatus: (maritalStatus$ | async),
+  stratum: (stratum$ | async),
+  sustenting: (sustenting$ | async)
 } as data">
   <mr-register-content
     [hobbies]="data.hobbies"
     [cities]="data.cities"
     [states]="data.states"
+    [documents]="data.documents"
+    [education]="data.education"
+    [ethnicGroups]="data.ethnicGroups"
+    [familyCore]="data.familyCore"
+    [familyIncome]="data.familyIncome"
+    [housingType]="data.housingType"
+    [maritalStatus]="data.maritalStatus"
+    [stratum]="data.stratum"
+    [sustenting]="data.sustenting"
     (createUser)="handleCreateUser($event)"
     (selectedState)="handleLoadCities($event)"
   ></mr-register-content>
