--- a/src/app/ui/forms/form-user/form-user.component.scss
+++ b/src/app/ui/forms/form-user/form-user.component.scss
@@ -26,7 +26,9 @@
   }
 
   &__file {
-    display: block;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: styles.$box-pad-base;
   }
 }
 
@@ -36,8 +38,7 @@
 
     &__section, 
     &__location,
-    &__description,
-    &__file {
+    &__description {
       grid-template-columns: repeat(2, styles.$box-fr-base);
     }
 
