--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
@@ -107,6 +107,15 @@
       [hobbies]="hobbies"
       [states]="states"
       [cities]="cities"
+      [documents]="documents"
+      [education]="education"
+      [ethnicGroups]="ethnicGroups"
+      [familyCore]="familyCore"
+      [familyIncome]="familyIncome"
+      [housingType]="housingType"
+      [maritalStatus]="maritalStatus"
+      [stratum]="stratum"
+      [sustenting]="sustenting"
       [canResetForm]="canCloseModal"
       (formUpdate)="handleSelectState($event)"
       (initForm)="handleSelectState($event)"
